Hoan thien bai va code chuyen doi qua lai 2 trang

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -148,7 +148,7 @@
             android:textColor="@color/white"></TextView>
 
         <TextView
-            android:id="@+id/click_Signin"
+            android:id="@+id/txt_Login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login"
