--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@+id/nhapUserHoacEmail" />
 
     <Button
-        android:id="@+id/btn_Signin"
+        android:id="@+id/btn_Login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -102,9 +102,9 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/btn_Signin"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Login"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btn_Signin"
+        app:layout_constraintStart_toStartOf="@+id/btn_Login"
         app:layout_constraintTop_toBottomOf="@+id/socialicons" />
 
     <ImageView
@@ -123,9 +123,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/btn_Signin"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Login"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/btn_Signin"
+        app:layout_constraintStart_toStartOf="@+id/btn_Login"
         app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <ImageView
@@ -151,9 +151,9 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/btn_Signin"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Login"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/btn_Signin"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Signin" />
+        app:layout_constraintStart_toStartOf="@+id/btn_Login"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
